* Used apply instead call. * Updated `bower.json` defintion. * Added mimify source version.

--- a/bower.json
+++ b/bower.json
@@ -10,14 +10,21 @@
   ],
   "keywords": [
     "php",
-    "trait"
+    "trait",
+    "polyfill"
   ],
   "authors": [
     "Cedrick Oka Baidai <okacedrick@gmail.com>"
   ],
   "license": "MIT",
   "ignore": [
+  	"*",
     "**/.*",
+    "!/LICENSE",
+    "!/README.*",
+    "!/CHANGELOG.*",
+    "!/CONTRIBUTING.*",
+	"!/trait.min.js",
     "test",
     "tests",
     "node_modules",
